--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@ body {
     height: 100%;
 }
 
-.container {
+.container{
+  margin: 25px;
+}
+
+.card {
   max-width: 500px;
   padding: 15px;
   margin: 2% auto;
