--- a/css/style.css
+++ b/css/style.css
@@ -11,39 +11,40 @@ body {
 .container {
   text-align: center;
   max-width: 480px;
-  padding: 15px;
-  margin: 0 auto;
+  padding: 10px 15px;
+  margin: 0 auto 3%;
   background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.16), 0 2px 6px rgba(0,0,0,0.23);
   position: absolute;
   left: 3%;
-  top: 65px;
+  top: 89px;
   right: 3%;
-  min-height: 87%;
+  min-height: 80%;
 }
 
 #title {
     color: #FFF;
     margin-bottom: 5px;
     text-align: center;
-    font-size: 3.2em;
-    margin: 19px;
+    font-size: 2.7em;
+    margin: 20px;
 }
 
 #roll {
-  font-size: 4em;
+  font-size: 3.5em;
+  line-height: 1.2em;
   margin: 0px;
-  color: #2A8BCC;
+  color: #6FAFDA;
   font-weight: 400;
-  text-shadow: 2px 2px 4px #BDBDBD;
+  /* text-shadow: 1px 1px 1px #6B6B6B; */
 }
 
 .combination{
   border-radius: 14px;
   margin-bottom: 10px;
   margin-top: 10px;
-  padding: 20px;
+  padding: 10px;
   border-bottom: 1px solid #ECECEC;
   /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 }
@@ -60,6 +61,8 @@ body {
     vertical-align: middle;
 }
 
+.c3{margin-bottom: 100px;}
+
 .combinationDice{
   margin: 0;
   font-size: 2.5em;
@@ -68,6 +71,33 @@ body {
 .combinationDice span{
   color: #CECECE;
   font-weight: 400;
+}
+
+.nbutton {
+  position: relative;
+  vertical-align: top;
+  width: 94%;
+  height: 60px;
+  padding: 0;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #3498db;
+  border: 0;
+  border-bottom: 2px solid #2a8bcc;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #2a8bcc;
+  box-shadow: inset 0 -2px #2a8bcc;
+  position: absolute;
+  bottom: 3%;
+  left: 3%;
+  right: 3%;
+}
+.nbutton:active {
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .button-wrap{
@@ -154,6 +184,49 @@ body {
 /* HTML5 display definitions
    ========================================================================== */
 
+/**
+ * Correct `block` display not defined for any HTML5 element in IE 8/9.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11
+ * and Firefox.
+ * Correct `block` display not defined for `main` in IE 11.
+ */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/* Links
+   ========================================================================== */
+
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+
+a:active,
+a:hover {
+  outline: 0;
+}
+
 /* Text-level semantics
    ========================================================================== */
 
@@ -176,6 +249,25 @@ h1 {
   margin: 0.67em 0;
 }
 
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove border when inside `a` element in IE 8/9/10.
+ */
+
+img {
+  border: 0;
+}
+
+/**
+ * Correct overflow not hidden in IE 9/10/11.
+ */
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
 /* Forms
    ========================================================================== */
 
@@ -192,7 +284,10 @@ h1 {
  */
 
 button,
-input{
+input,
+optgroup,
+select,
+textarea {
   margin: 0; /* 3 */
 }
 
@@ -258,4 +353,61 @@ input::-moz-focus-inner {
 
 input {
   line-height: normal;
+}
+
+/**
+ * It's recommended that you don't attempt to style these elements.
+ * Firefox's implementation doesn't respect box-sizing, padding, or width.
+ *
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ */
+
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Fix the cursor style for Chrome's increment/decrement buttons. For certain
+ * `font-size` values of the `input`, it causes the cursor style of the
+ * decrement button to change from `default` to `text`.
+ */
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
+ *    (include `-moz` to future-proof).
+ */
+
+input[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box; /* 2 */
+  box-sizing: content-box;
+}
+
+/**
+ * Remove inner padding and search cancel button in Safari and Chrome on OS X.
+ * Safari (but not Chrome) clips the cancel button when the search input has
+ * padding (and `textfield` appearance).
+ */
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * Remove default vertical scrollbar in IE 8/9/10/11.
+ */
+
+textarea {
+  overflow: auto;
 }
