--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,16 @@ body {
 .container {
   text-align: center;
   max-width: 480px;
-  padding: 15px;
-  margin: 0 auto;
+  padding: 10px 15px;
+  margin: 0 auto 3%;
   background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.16), 0 2px 6px rgba(0,0,0,0.23);
   position: absolute;
   left: 3%;
-  top: 65px;
+  top: 89px;
   right: 3%;
-  min-height: 87%;
+  min-height: 80%;
 }
 
 #title {
@@ -32,18 +32,18 @@ body {
 }
 
 #roll {
-  font-size: 4em;
+  font-size: 3.5em;
+  line-height: 1.2em;
   margin: 0px;
-  color: #2A8BCC;
+  color: #6FAFDA;
   font-weight: 400;
-  text-shadow: 2px 2px 4px #BDBDBD;
 }
 
 .combination{
   border-radius: 14px;
   margin-bottom: 10px;
   margin-top: 10px;
-  padding: 20px;
+  padding: 10px;
   border-bottom: 1px solid #ECECEC;
   /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 }
@@ -59,6 +59,8 @@ body {
     font-style: normal;
     vertical-align: middle;
 }
+
+.c3{margin-bottom: 100px;}
 
 .combinationDice{
   margin: 0;
