--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ body {
     right: 0;
     bottom: 0;
     top: 0;
-    /* height: 100%;*/
+    height: 100%;
 }
 
 .container {
   text-align: center;
   max-width: 480px;
   padding: 10px 15px;
-  margin: 0 auto;
+  margin: 0 auto 3%;
   background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.16), 0 2px 6px rgba(0,0,0,0.23);
@@ -20,7 +20,11 @@ body {
   left: 3%;
   top: 89px;
   right: 3%;
-  /* min-height: 80%;*/
+}
+
+#output {
+    margin-bottom: 50px;
+    overflow: auto;
 }
 
 #title {
@@ -29,10 +33,6 @@ body {
     text-align: center;
     font-size: 3.2em;
     margin: 19px;
-}
-
-#output {
-    margin-bottom: 200px;
 }
 
 #roll {
@@ -96,39 +96,56 @@ body {
   outline: none;
   width: 80%;
   text-shadow: 0 -0.5px 1px rgba(0, 0, 0, 0.15);
-  background: #26A69A;
+}
+
+.button {
   padding: 1.5em 3em;
   margin: 0;
   position: relative;
   min-width: 250px;
   display: inline-block;
-  overflow: hidden;
-  -ms-touch-action: manipulation;	/* IE10  */
-	touch-action: manipulation;		/* IE11+ */
 }
-.button:hover {
+
+.button.styl-material {
+  -webkit-transition: 200ms background cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 200ms background cubic-bezier(0.4, 0, 0.2, 1);
+  background: #E91E63;
+}
+
+.button.styl-material:hover,
+.button.styl-material:focus {
+  outline: none;
+  background: #EC407A;
+}
+
+.ripple-obj {
+  height: 100%;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  fill: #AD1457;
+}
+
+.ripple-obj use {
+  opacity: 0;
+}
+
+.button.styl-material {
   background: #009688;
 }
 
-
-.circle {
-  display: block;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.075);
-  border-radius: 50%;
-  transform: scale(0);
+.button.styl-material:hover,
+.button.styl-material:focus {
+  background: #26A69A;
 }
 
-.circle.animate {
-  animation: effect 0.65s linear;
+.ripple-obj {
+  fill: #00695C;
 }
 
-@keyframes effect {
-  100% {
-    opacity: 0;
-    transform: scale(2.5);
-  }
-}
 
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
