--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   text-align: center;
   max-width: 480px;
   padding: 10px 15px;
-  margin: 0 auto 3%;
+  margin: 0 auto 25px;
   background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.16), 0 2px 6px rgba(0,0,0,0.23);
