--- a/css/style.css
+++ b/css/style.css
@@ -11,34 +11,33 @@ body {
     right: 0;
     bottom: 0;
     top: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
-  text-align: center;
-  max-width: 480px;
-  padding: 10px 15px;
-  margin: 0 auto 15px;
-  background-color: #fff;
-  border-radius: 7px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.16), 0 2px 6px rgba(0,0,0,0.23);
-  position: absolute;
-  left: 3%;
-  top: 89px;
-  right: 3%;
-  /* min-height: 80%;*/
+	text-align: center;
+	max-width: 480px;
+	padding: 10px 15px;
+	margin: 0 auto 30px;
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0 2px 6px rgba(0,0,0,0.16), 0 2px 6px rgba(0,0,0,0.23);
+	position: relative;
+	width: 92%;
 }
 
 #title {
-    color: #FFF;
-    margin-bottom: 5px;
-    text-align: center;
-    font-size: 3.2em;
-    margin: 19px;
+	color: #FFF;
+	margin-bottom: 5px;
+	text-align: center;
+	font-size: 2.5em;
+	margin: 30px 10px 30px;
 }
 
 #output {
-    margin-bottom: 50px;
-    overflow: auto;
+  margin-bottom: 50px;
+  overflow: auto;
 }
 
 #roll {
@@ -70,8 +69,6 @@ body {
     vertical-align: middle;
 }
 
-.c3{margin-bottom: 100px;}
-
 .combinationDice{
   margin: 0;
   font-size: 2.5em;
@@ -83,10 +80,7 @@ body {
 }
 
 .button-wrap{
-  position: absolute;
-  bottom: 3%;
-  left: 3%;
-  right: 3%;
+	margin: 0 auto 25px;
 }
 
 .button {
