--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,11 @@ body {
 }
 
 .combination{
-  border-radius: 14px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  padding: 10px;
-  border-bottom: 1px solid #ECECEC;
-  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+	border-radius: 14px;
+	margin: 10px;
+	padding: 10px;
+	border-bottom: 1px solid #ECECEC;
+	box-shadow: 0 4px 14px -5px rgba(0, 0, 0, 0.14);
 }
 .combination p{
   font-size: 1em;
@@ -63,16 +62,17 @@ body {
   font-style: italic;
 }
 .combination p strong {
-    font-size: 1.5em;
-    color: #FC9003;
-    font-style: normal;
-    vertical-align: middle;
+	font-size: 2em;
+	color: #7d9896;
+	font-style: normal;
+	vertical-align: middle;
+	font-weight: 200;
 }
 
 .combinationDice{
   margin: 0;
   font-size: 2.5em;
-  color: #4E4E4E;
+  color: #FF9800;
 }
 .combinationDice span{
   color: #CECECE;
@@ -104,7 +104,8 @@ body {
   display: inline-block;
   overflow: hidden;
   -ms-touch-action: manipulation;	/* IE10  */
-	touch-action: manipulation;		/* IE11+ */
+  touch-action: manipulation;		/* IE11+ */
+  border-radius: 100px;
 }
 .button:hover {
   background: #009688;
