--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,7 @@
 
 body {
     background-color: #26A69A;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -144,6 +140,7 @@ html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  height: 100%;
 }
 
 /**
