--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    background-repeat: no-repeat;
+	  background-attachment: fixed;
 }
 
 .container {
