--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ body {
   -ms-touch-action: manipulation;	/* IE10  */
   touch-action: manipulation;		/* IE11+ */
   border-radius: 100px;
+  transition: .3s;
 }
 .button:hover {
   background: #f76e84;
