--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body {
 	font-size: 2em;
 	color: #2C365E;
 	font-style: normal;
-	vertical-align: middle;
+	vertical-align: sub;
 	font-weight: 200;
 }
 
