--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,17 @@
 }
 
 body {
-    background-color: #ADD2EB;
-    background-image: linear-gradient(45deg, hsla(204, 64%, 71%, 1) 0%, #ADD2EB 100%);
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-repeat: no-repeat;
-	  background-attachment: fixed;
+	background-color: #ADD2EB;
+	background-image: linear-gradient(45deg, hsla(204, 64%, 71%, 1) 0%, #ADD2EB 100%);
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-image: radial-gradient(rgb(103 95 227 / 30%) 1px, transparent 1px), radial-gradient(rgb(103 95 227 / 30%) 1px, #add2eb 1px);
+	background-size: 40px 40px;
+	background-position: 0 0,20px 20px;
+	background-repeat: repeat;
 }
 
 .container {
