Add shake animation when rolling the dice
Added a shake animation whenever the "Roll again" button is pressed.

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,13 @@ body {
 	box-shadow: 0 20px 40px rgba(26, 41, 51, 0.22);
 }
 
+.container.shake{
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
 #title {
 	color: #ffffff;
 	margin-bottom: 5px;
@@ -138,6 +145,24 @@ svg {
   100% {
     opacity: 0;
     transform: scale(2.5);
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0) scale(1.1);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
   }
 }
 
