--- a/css/style.css
+++ b/css/style.css
@@ -174,24 +174,29 @@ svg {
   background: var(--accent-color-light);
 }
 
-
-.circle {
-  display: block;
+.ripple-container {
   position: absolute;
-  background: var(--accent-color);
+  left: 0;
+  top: 0;
+  height: 0;
+  width: 0;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+.ripple-effect {
+  margin-top: 0px;
+  margin-left: 0px;
+  width: 1px;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.033);
+  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 50%;
-  transform: scale(0);
+  pointer-events: none;
 }
 
-.circle.animate {
-  animation: effect 0.65s linear;
-}
-
-@keyframes effect {
-  100% {
-    opacity: 0;
-    transform: scale(2.5);
-  }
+.ripple-effect.dark {
+  background-color: rgba(0, 0, 0, 0.075);
 }
 
 @keyframes shake {
